# kage-bench

./: .gitignore  LICENCE  README.md  pyproject.toml
additional_experiments/: bench_multi_conf_ppo_jax.sh  readme.md
additional_experiments/num_of_train_bg_colors/: config_2_val_black.yaml  config_2_val_black_white.yaml  config_2_val_black_white_red.yaml  config_2_val_black_white_red_green.yaml  config_2_val_black_white_red_green_blue.yaml
additional_experiments/radial_light/: config_9_val_0.0.yaml  config_9_val_0.25.yaml  config_9_val_0.5.yaml  config_9_val_0.75.yaml  config_9_val_1.0.yaml
additional_experiments/sticky_npcs/: config_5_train.yaml  config_5_val_1.yaml  config_5_val_11.yaml  config_5_val_2.yaml  config_5_val_3.yaml  config_5_val_5.yaml  config_5_val_9.yaml
additional_scripts/: checker_finished_correctly.sh  count_results.sh  run_configs_from_list.sh  run_configs_sequentially.sh
benchmark/: bench_generalization_ppo_jax.sh  benchmark_throughput.sh  get_axis_metrics.py  get_metrics_from_runs.py  get_multi_eval_metrics.py  plot_all_configs.py  plot_multi_eval_configs.py
benchmark/kage_bench_configs/: bench_description.md
benchmark/kage_bench_configs/agent_appearance/: config_1_val.yaml  config_2_val.yaml  config_3_val.yaml  config_5_val.yaml
benchmark/kage_bench_configs/background/: config_10_train.yaml  config_10_val.yaml  config_1_val.yaml  config_2_train.yaml  config_2_val.yaml  config_3_val.yaml  config_4_train.yaml  config_5_train.yaml  config_5_val.yaml  config_6_train.yaml  config_6_val.yaml  config_7_train.yaml  config_7_val.yaml  config_8_val.yaml
benchmark/kage_bench_configs/distractors/: config_1_train.yaml  config_1_val.yaml  config_2_val.yaml  config_3_val.yaml  config_4_train.yaml  config_4_val.yaml  config_5_val.yaml  config_6_val.yaml
benchmark/kage_bench_configs/effects/: config_1_val.yaml  config_2_val.yaml  config_3_train.yaml  config_3_val.yaml
benchmark/kage_bench_configs/filters/: config_1_val.yaml  config_2_val.yaml  config_3_val.yaml  config_4_val.yaml  config_5_val.yaml  config_6_val.yaml  config_7_val.yaml  config_8_val.yaml  config_9_val.yaml
benchmark/kage_bench_configs/layout/: config_1_train.yaml  config_1_val.yaml
rl_algorithms/jax/: ppo_jax.py  ppo_jax_multi_conf.py
scripts/: bench_vectorized.py  create_video.py  demo_autoreset.py  play_human.py  test_step_info.py  test_step_info_gymnasium.py  verify_render.py
scripts/fps_bench_configs/: hardest_config.yaml
src/kage_bench/: __init__.py
src/kage_bench/configs/: default_config.yaml
src/kage_bench/core/: __init__.py  config.py  environment.py  state.py
src/kage_bench/entities/: __init__.py  character.py  distractors.py  npc.py
src/kage_bench/gen_axis/: __init__.py  filters.py  image_bg.py
src/kage_bench/systems/: __init__.py  camera.py  layout.py  physics.py  renderer.py
src/kage_bench/systems/generation/: __init__.py  background.py  effects.py  filters.py
src/kage_bench/utils/: __init__.py  config_loader.py  shapes.py
src/kage_bench/wrappers/: __init__.py  gymnasium.py  jax_wrappers.py
